# src/main/java/org/Autogenerated/src/main/java/io/codejournal/maven/swagger2java/api/BookApiController.java
@@ -1,73 +1,0 @@
-package io.codejournal.maven.swagger2java.api;
-
-import io.codejournal.maven.swagger2java.model.Book;
-import com.fasterxml.jackson.databind.ObjectMapper;
-import io.swagger.annotations.*;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
-import org.springframework.stereotype.Controller;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestHeader;
-import org.springframework.web.bind.annotation.RequestParam;
-import org.springframework.web.bind.annotation.RequestPart;
-import org.springframework.web.multipart.MultipartFile;
-
-import javax.validation.constraints.*;
-import javax.validation.Valid;
-import javax.servlet.http.HttpServletRequest;
-import java.io.IOException;
-import java.util.List;
-@javax.annotation.Generated(value = "io.swagger.codegen.languages.SpringCodegen", date = "2022-09-08T20:47:09.323+05:30")
-
-@Controller
-public class BookApiController implements BookApi {
-
-    private static final Logger log = LoggerFactory.getLogger(BookApiController.class);
-
-    private final ObjectMapper objectMapper;
-
-    private final HttpServletRequest request;
-
-    @org.springframework.beans.factory.annotation.Autowired
-    public BookApiController(ObjectMapper objectMapper, HttpServletRequest request) {
-        this.objectMapper = objectMapper;
-        this.request = request;
-    }
-
-    public ResponseEntity<Void> addBook(@ApiParam(value = "Pet object that needs to be added to the store" ,required=true )  @Valid @RequestBody Book body) {
-        String accept = request.getHeader("Accept");
-        return new ResponseEntity<Void>(HttpStatus.NOT_IMPLEMENTED);
-    }
-
-    public ResponseEntity<Void> deleteBook(@ApiParam(value = "Pet Book to delete",required=true) @PathVariable("ID") Long ID) {
-        String accept = request.getHeader("Accept");
-        return new ResponseEntity<Void>(HttpStatus.NOT_IMPLEMENTED);
-    }
-
-    public ResponseEntity<Book> getBookByID(@ApiParam(value = "ID of Book to return",required=true) @PathVariable("ID") Long ID) {
-        String accept = request.getHeader("Accept");
-        if (accept != null && accept.contains("application/xml")) {
-            try {
-                return new ResponseEntity<Book>(objectMapper.readValue("<Book>  <ID>123456789</ID>  <AUTHOR_ID>123456789</AUTHOR_ID>  <TITLE>aeiou</TITLE>  <PUBLISHED_IN>123456789</PUBLISHED_IN>  <LANGUAGE_ID>123456789</LANGUAGE_ID></Book>", Book.class), HttpStatus.NOT_IMPLEMENTED);
-            } catch (IOException e) {
-                log.error("Couldn't serialize response for content type application/xml", e);
-                return new ResponseEntity<Book>(HttpStatus.INTERNAL_SERVER_ERROR);
-            }
-        }
-
-        if (accept != null && accept.contains("application/json")) {
-            try {
-                return new ResponseEntity<Book>(objectMapper.readValue("{\"empty\": false}", Book.class), HttpStatus.NOT_IMPLEMENTED);
-            } catch (IOException e) {
-                log.error("Couldn't serialize response for content type application/json", e);
-                return new ResponseEntity<Book>(HttpStatus.INTERNAL_SERVER_ERROR);
-            }
-        }
-
-        return new ResponseEntity<Book>(HttpStatus.NOT_IMPLEMENTED);
-    }
-
-}
